# grafit

./: .gitignore  Dockerfile.embed  LICENSE  README.md  docker-compose.yml  pyproject.toml  run-tests.sh
docs/: falkordb-browser.md  graphify-csharp-di-patch.md  setup-for-claude-code.md  setup-for-opencode-readonly.md  testing.md
grafit/: __init__.py  cli.py  common.py  dupes.py  embed_server.py  eval.py  index.py  mcp_server.py  nav.py  search.py
grafit/data/: golden.example.json
scripts/: rebuild-all.sh
tests/: conftest.py  test_navigation.py  test_pure.py
