[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grafit-mcp"
version = "0.1.0"
description = "Code knowledge-graph + семантический поиск (FalkorDB + локальные эмбеддинги) с MCP"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Grafit contributors" }]
keywords = ["graphrag", "knowledge-graph", "code-search", "mcp", "falkordb", "embeddings"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "fastembed>=0.4",
  "falkordb>=1.0",
  "numpy>=1.21",
  "mcp>=1.0",
]

[project.optional-dependencies]
# Реранкер тянет кросс-энкодеры fastembed; функционал есть и без extra, это просто маркер.
rerank = []

[project.scripts]
grafit = "grafit.cli:main"
grafit-mcp = "grafit.mcp_server:main"

[project.urls]
Homepage = "https://github.com/ILexV/grafit"
Repository = "https://github.com/ILexV/grafit"

[tool.hatch.build.targets.wheel]
packages = ["grafit"]
